libgphoto2 2.5.10.1 development

canon:
* not experimental anymore, for some years

ptp2:
* sony: exposure compensation setting fixed
* sony: capture and autofocus configurations, similar to eosremoterelease
* fixed serialnumber retrieval
* new ids reported:
  - Sony Alpha 7, DSC-RX100M4
  - Nikon DSC Df
  - Canon EOS 1Dx Mark 3, 80D

translations:
* updated svensk, ukrainian, polish, finnish, russian, danish, polish, brazilian, serbian, brazilian, serbian
------------------------------------------------------------------------------
libgphoto2 2.5.10 release

libgphoto2:
* added gp_camera_list_config, gp_camera_get_single_config, gp_camera_set_single_config
  additional configuration APIs for faster access to single configuration values.

ptp2:
* allow generic opcode commands with parameters, config variable "opcode"
* fixed pretending that Nikon Coolpix S series is a Nikon 1 S.
* Nikon: fixed problem with SDRAM capture
* Canon EOS: handle "no focus" during capture
* Canon EOS: handle --new correctly
* Canon Powershot: handle lack of object protection setting
* Ricoh Theta: support shutterspeed configuration
* added size checking to PTP unpacking primitives
* various bugfixes
* New ids:
  * Imported Media Players and Android phones from libmtp
  * Sony Alpha A7S II, ILCE 7M2
  * Kodak Z990
  * Nikon Coolpix L840, S3600
  * Leica SL
  * Olympus TG-620, E-M5 Mark 2
  * Canon EOS 1D C, 750D
  * Canon IXUS 160
  * Fuji Film X-T1, X-T10, A-610


pentax:
* fixed some crashes on non-existing config variables
* use portable directory api (helps Visual Studio)

libgphoto2_port/vusb:
* Implemented a virtual PTP camera for test purposes.

libgphoto2_port/disk:
* Support exfat fuse filesystems.

all:
* fixed various issues found by Coverity static analyzer
* removed unistd.h headers where not needed to help Visual Studio

translations:
* updated swedish, brazilian portuguese, danish, polish, ukrainian, vietnamese
